--- a/index.html
+++ b/index.html
@@ -120,36 +120,36 @@
                 <a>career</a>
                 <a>blog</a>
                 <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
+                <a>ship orders</a>
+                <a>internationally</a>
+             
             </ul>
             <ul>
-                <p>Get to know us</p>
-                <a>career</a>
-                <a>blog</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
+                <p>Amazon ads</p>
+                <a>reach customers</a>
+                <a>wherever </a>
+                <a>they</a>
+                <a>reach</a>
+                <a>their</a>
+                <a>time</a>
             </ul>
             <ul>
-                <p>Get to know us</p>
+                <p>Abe books</p>
                 <a>career</a>
-                <a>blog</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
+                <a>books</a>
+                <a>sets</a>
+                <a>and </a>
+                <a>Collection</a>
+                <a> sets</a>
             </ul>
             <ul>
-                <p>Get to know us</p>
-                <a>career</a>
-                <a>blog</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
-                <a>about amazon</a>
+                <p>Amazon business</p>
+                <a>sell</a>
+                <a>anything</a>
+                <a>using</a>
+                <a>our</a>
+                <a>websites</a>
+                <a>more </a>
             </ul> 
         </div>
     </footer>
