--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p> Sell</p>
             </div>
             <div class="panel-deals">
-                Shop deals in Electronics
+                Shop deals in Electronicsss
             </div>
          </div>
          
