--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo"> <!-- /<img src="Amazonlogo.png" height="38px" width="100px" alt="error"> --> </div> 
             </div>
             <div class="nav-address border">
-                <p class="first"> Delivery to</p>
+                <p class="first"> Deliveryyy to</p>
                 <div class="add-icon">
                 <i class="fa-solid fa-location-dot"></i>
                 <p class="second">India</p> </div>
